[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "env_var_docs"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "jinja2==3.1.3"
]

[project.optional-dependencies]
test = [
    "mypy==1.9.0",
    "pytest-cov==4.1.0"
]
