[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "settings_manifest"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Jinja2==3.1.2"
]

[project.optional-dependencies]
test = [
    "mypy==1.3.0",
    "pytest-cov==4.0.0"
]
